[tool.poetry]
name = "streamlit-image-crop-sharing"
version = "0.1.0"
description = ""
authors = ["Tomoya Kose <tomoya@mitsuse.jp>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^0.76.0"
streamlit-image-crop = "^0.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
